--- a/style.css
+++ b/style.css
@@ -67,8 +67,7 @@ footer {
         
     #lgeocities:before, #lbelhuizen:before, #lhyves:before {
         position: absolute;
-        content: 'Part ' counter(chapter);
-        counter-increment: chapter;
+        content: 'New';
         font-family: Arial;
         font-size: 10px;
         position: absolute;
@@ -109,13 +108,6 @@ p {
         clear: left;
     }
 
-div.divider {
-    font-size: 2em;
-    line-height: 1.5em;
-    margin: 0 auto 1.5em;
-    text-align: center;
-    color: #3d3d3d;
-}
 
 li, blockquote, figcaption {
     line-height: 1.5em;
